# PlannerGAN

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
captures/rrt_vs_chomp_original/: README.md
data/: end_effector_positions_data.csv  joint_positions_data.csv  metrics_data.csv  metrics_data_sample1.csv  metrics_data_sample2.csv  metrics_data_sample3.csv  trajectory_data.csv
data/backup_no_obstacle/: end_effector_positions_data.csv  metrics_data.csv
descriptions/: iiwa14.urdf  iiwa14_standalone.urdf
iiwa_simulation/: CMakeLists.txt  package.xml
iiwa_simulation/launch/: iiwa_gazebo.launch.py
learning_pipeline/: PlannerGAN_Data_Merge.ipynb  PlannerGAN_Visualizations.ipynb  PlannerGAN_traj2position.ipynb  README.md
models/: README.md
models/MIT_Final_Model/: best_discriminator_checkpoint.pth  best_generator_checkpoint.pth  events.out.tfevents.1702309540.2481df825628.242 (3).1
models/models4/: discriminator_checkpoint.pth  generator_checkpoint.pth
models/traj2position/: README.md  traj2position_model.pth
models4/: README.md  events.out.tfevents.1702245437.a7d92415090e.1575.0
plannergan_iiwa/: CMakeLists.txt  package.xml
plannergan_iiwa/include/: iiwa_motion_planning_node.hpp
plannergan_iiwa/launch/: iiwa.launch.py  iiwa_gazebo_planning.launch.py  iiwa_pg.launch.py  iiwa_planning_pg.launch.py
plannergan_iiwa/src/: iiwa_motion_planning_node.cpp  motion_planning_node.cpp  rrt_planning.py  traj2position_node.cpp
